--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.woo.learnfitness">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -54,6 +57,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.woo.learnfitness.MainActivity" />
         </activity>
+        <activity android:name=".SignInActivity" />
+        <activity android:name=".StoryActivity" />
     </application>
 
 </manifest>
